# smb_common_team_2

./: README.md
launch_scripts/: CMakeLists.txt  package.xml
launch_scripts/launch/: sim_and_explore.launch  sim_and_setup.launch
smb_artifact/: CMakeLists.txt  package.xml
smb_artifact/launch/: artifact_detection.launch
smb_artifact/src/: artifact_detection_node.cpp
smb_brain/: CMakeLists.txt  package.xml  setup.py
smb_brain/nodes/: state_machine  time_keeper
smb_brain/src/smb_brain/: state_machine.py  time_keeper.py
smb_gazebo/worlds/: big_map_summer_school_noramp.world
smb_msf_graph/tutorial/config/: 1_smb_graph_params.yaml
